@@ -1,3 +1,13 @@
+2018-12-13  Per Arne Vollan  <pvollan@apple.com>
+
+        [macOS] Remove with-report from 3 services that are currently needed on macOS
+        https://bugs.webkit.org/show_bug.cgi?id=192593
+        <rdar://problem/46604752>
+
+        Reviewed by Brent Fulgham.
+
+        * WebProcess/com.apple.WebProcess.sb.in:
+
 2018-12-13  Youenn Fablet  <youenn@apple.com>
 
         On page close, WebPage::m_userMediaPermissionRequestManager is nullified too early
